--- a/botao/index.html
+++ b/botao/index.html
@@ -9,5 +9,6 @@
 </head>
 <body>
     <button class="botao"><p>Comprar agora</p></button>
+    <button class="botao2"><p>Adionar ao carrinho</p></button>
 </body>
 </html>
